# python_assignment_3

console_app/: Courses.pkl  Students.pkl  cmd.py  courses.csv  courses.py  instruction.txt  main.py  pyproject.toml  readme.md  students.py
console_app/.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  cmd.data.json  cmd.meta.json  codecs.data.json  codecs.meta.json  errno.data.json  errno.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  pickle.data.json  pickle.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
console_app/.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  cmd.data.json  cmd.meta.json  codecs.meta.json  courses.data.json  courses.meta.json  datetime.data.json  datetime.meta.json  enum.meta.json  errno.data.json  errno.meta.json  functools.data.json  functools.meta.json  genericpath.data.json  genericpath.meta.json  inspect.data.json  inspect.meta.json  io.meta.json  mmap.meta.json  pathlib.data.json  pathlib.meta.json  pickle.data.json  pickle.meta.json  posix.meta.json  re.meta.json  students.data.json  students.meta.json  subprocess.data.json  subprocess.meta.json  sys.meta.json  time.data.json  (+6 more)
(+70 files in other folders)
