[tool.poetry]
name = "rai_assignment"
version = "0.1.0"
description = "insight workshop assignment"
authors = ["Yunik Maharjan <yunik.maharjan@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
